# SmartSingletone-concept

./: CMakeLists.txt
src/: CMakeLists.txt  Classic01_correct.cpp  Classic02_incorrect.cpp  Classic03_correct.cpp  Classic04_correct.cpp  Classic05_incorrect.cpp  Classic_Example1_Step1_correct.cpp  Classic_Example2_Step1_correct.cpp  DemoClassic.cpp  DemoClassicCorrect02.cpp  SingletoneClassic.h  fake.cpp
src/SingleThreaded/: CMakeLists.txt  CallbackPayload.h  Classic_Example1_Step1_correct.cpp  Classic_Example1_Step2_incorrect.cpp  Classic_Example1_Step3_correct.cpp  Classic_Example1_correct.cpp  Classic_Example2_Step1_correct.cpp  Classic_Example2_Step2_incorrect.cpp  Classic_Example2_Step3_correct.cpp  Classic_Example2_incorrect.cpp  Classic_Example3_correct.cpp  Classic_Step1_correct.cpp  Classic_Step2_incorrect.cpp  Classic_Step3_correct.cpp  Payload.h  Shared_Example1_Step1_correct.cpp  Shared_Example1_Step2_incorrect.cpp  Shared_Example1_Step3_correct.cpp  Shared_Example1_Step4_incorrect.cpp  Shared_Example1_correct.cpp  Shared_Example2_incorrect.cpp  Shared_Example3_correct.cpp  Shared_Example4_incorrect.cpp  Shared_Example5_incorrect.cpp  Shared_Step3_correct.cpp  Shared_Step4_incorrect.cpp  SingletonClassic.h  SingletonPayload.h  SingletonShared.h  SingletonWeak.h  SingletoneClassic.h  SingletonePayload.h  SingletoneShared.h  SingletoneWeak.h  SomethingWithVeryImportantDestructor.h  Weak_Example1_Step1_correct.cpp  Weak_Example1_Step2_incorrect.cpp  Weak_Example1_correct.cpp  Weak_Example2_correct.cpp  Weak_Example2_incorrect.cpp  (+4 more)
